--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,7 @@ $white-shadow: rgba(255, 255, 255, 0.5);
                 justify-content: center;
 
                 .btn {
+                    will-change: box-shadow;
                     min-width: 180px;
                     width: 180px;
                     max-width: 180px;
